# pbdSLAP

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  .travis.yml  ChangeLog  ChangeNote  DESCRIPTION  INSTALL  INSTALL.win.src  NAMESPACE  README  README.md  appveyor.yml  cleanup  configure  configure.ac
R/: 000_globalVariables.r  get_conf.r  slap_blacs.r  zzz.r
data/: env.r  envir.r
demo/: 00Index  gridinfo.r
inst/: CITATION  Change_Note.txt
inst/doc/: pbdSLAP-guide.Rnw
inst/doc/pbdSLAP-include/: 01-acknowledgement.tex  01-introduction.tex  03-slap.tex  pbdSLAP.bib
inst/test_intface/: 00_make.sh  00_make.win  Cintface.c  Makefile
man/: 00_pbdSLAP-package.Rd  slap_gridinfo.Rd
src/: Makevars.in  Makevars.win  SLmake.inc.org  SLmake.inc.win  install.libs.R  slap_blacs.f  zzz.c  zzz.h
src/BLACS/: BI_BlacsAbort.c  BI_BlacsErr.c  BI_BlacsWarn.c  BI_MringComb.c  BI_TreeComb.c  Bdef.h  Bdef_wcc.h  Makefile  blacs2sys_.c  blacs_abort_.c  blacs_barr_.c  blacs_get_.c  blacs_init_.c  dgamn2d_.c  dgamx2d_.c  dgebr2d_.c  dgebs2d_.c  dgsum2d_.c  dtrbr2d_.c  dtrbs2d_.c  igamn2d_.c  igamx2d_.c  igebr2d_.c  igebs2d_.c  igsum2d_.c  sys2blacs_.c
src/LAPACK/: Makefile  dlarra.fo  dlarrc.fo  dlarrd.fo  dlarrk.fo
src/PBLAS/: Makefile  PBblacs.h  PBblas.h  PBpblas.h  PBtools.h  pdagemv_.c  pdamax_.c  pdasum_.c  pdasymv_.c  pdatrmv_.c  pddot_.c  pdgeadd_.c  pdgemm_.c  pdgemv_.c  pdger_.c  pdnrm2_.c  pdscal_.c  pdswap_.c  pdsymm_.c  pdsymv_.c  pdsyr2_.c  pdsyr2k_.c  pdsyr_.c  pdsyrk_.c  pdtrmm_.c  pdtrmv_.c  pdtrsm_.c  pdtrsv_.c  wcc_PBtools.h
src/PBLAS/PBBLAS/: Makefile
src/PBLAS/PTOOLS/: Makefile  PB_Cdtypeset.c  PB_Cgetbuf.c  PB_Citypeset.c  PB_Cmalloc.c  PB_Cpaxpby.c  PB_Cpgeadd.c  PB_CpgemmAB.c  PB_CpgemmAC.c  PB_Cplapad.c  (+19 more)
src/REDIST/: Makefile  pdgemr.c  pdgemr2.c  pdtrmr.c  pdtrmr2.c  pgemraux.c  pigemr.c  pigemr2.c  pitrmr.c  pitrmr2.c  redist.h
src/ScaLAPACK/: Makefile  dlamov.c  getpbbuf.c  pbchkvect.c  pblas.h  pdhseqr.f  pdlacon.f  pdlaiect.c  pdlange.f  pdlanhs.f  pdlansy.f  pdlantr.f  pdlaqr5.f  pdlarf.f  pdlarz.f  pdlassq.f  pdlawil.f  pdstebz.f  pdtrord.f  pdtrsen.f
src/TOOLS/: Makefile  SL_gridreshape.c  pdchekpad.f  pdfillpad.f  pdlaprnt.f  pdlaread.f  pdlawrite.f  pdtreecomb.f  pichekpad.f  pifillpad.f  pilaprnt.f  reshape.c
vignettes/: build_pdf.sh  pbdSLAP-guide.Rnw
vignettes/pbdSLAP-include/: 01-acknowledgement.tex  01-introduction.tex  02-extra.tex  04-blacs.tex  jss.cls
(+5 files in other folders)
